# django-tutorial-2

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
static/css/: styles.css
static/js/: app.js
templates/: base.html  create-task.html  dashboard.html  delete-task.html  index.html  my-login.html  pre-base.html  register.html  update-task.html  view-tasks.html
templates/profile/: base.html  create-task.html  dashboard.html  delete-account.html  delete-task.html  profile-management.html  update-task.html  view-tasks.html
todo/: admin.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_review.py  0003_delete_review_delete_task.py  0004_initial.py  0005_profile.py
