[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["kmseunh <tmdgus8779@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.0"
django = "^5.0.4"
psycopg2 = "^2.9.9"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
